--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.15.30",
+    "@types/react": "19.1.6",
+    "typescript": "5.8.3"
   }
 }
